[tool.poetry]
name = "pyuque"
version = "0.3.0"
authors = ["lichun"]
description = "A Python client/toolkit for yuque."
homepage = "https://github.com/socrateslee/pyuque"
license = "MIT"

[tool.poetry.scripts]
pyuque = 'pyuque.cli:main'

[tool.poetry.dependencies]
python = "^3.5"
requests = "^2.22.0"
bs4 = "^0.0.1"
Markdown = "^3.2.2"